# django-secrets

./: .coveragerc  .envrc  .gitignore  .travis.yml  .venv  LICENSE  Makefile  Pipfile  README.md  README.rst  manage.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
django_secrets/: settings.py  startup.py  tests.py  urls.py  utils.py  wsgi.py
django_secrets/management/commands/: export_secrets.py
scripts/: bumpversion.sh
