[tool.poetry]
name = "django_secrets"
version = "1.1.0"
description = ""
authors = ["Andy Grabow <andy@freilandkiwis.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
six = "^1.11"
future = "^0.16.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
codecov = "^2.0"
flake8 = "^3.5"
pytest = "^3.6"
wheel = "^0.31.1"

