[tool.poetry]
name = "django_secrets"
version = "1.2.3"
description = ""
authors = ["Andy Grabow <andy@freilandkiwis.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.11"
future = "^0.18.2"
Django = ">=2.2.27"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
codecov = "^2.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
wheel = "^0.37.1"

